2. Extended Log to show time, severity.
3. Added getCurrentASCIITime functions to System.x
4. Extended options on CIMServer including 1. option to determine where logs
are put
5. Added TestClient that executes a series of tests against a server.  This is
a preliminary version.
6. Corrected problem with acceptor.bind where failure was being lost. Now
throws CannotBind exception.
----------------------------------------------------------------
Version 0.97.2

1. Extend HP UX port to correctly load Dynamic Load Libraries.
2. Extend Formatter for Boolean and Uint32 types.
3. Change CIM Server to use Trace (-t) flag.  This also changed
   Handler.h to work off of flag.
4. Minor corrections to __Namespace Provider.
5. Extend tests for Formatter, String, and other modules.
6. Correct errors in documentation.
7. New working papers (provider interface).
8. Add Providerreg.exe tool.
9. Add trace output for messages sent from the Server.
-----------------------------------------------------------------------
23 May 2001 Version 0.97.1 Tags as version_0_971

1. Add PEG_NOT_FOUND symbol to replace Uint32(-1) in any of the object
find functions.  Note: This symbol is defined in config.h. (ks).

2. Port To HP UX.  This required a number of changes particularly in the area
of dynamic lib loaading.


------------------------------------------------------------------------
21 May 2001  Version 0.97 - Tagged as version_0_97

1. Added methods in CIMClass, CIMInstance, for existance of properties,
qualifiers, methods.
2. Add methods in CIMClass, CIMInstance to remove properties, qualifier,
methods.
3. Added CIMmethod and CIMProperty in CIMMethod to text for existance of
qualifiers and to
remove qualifiers.
4. Ported to AIX. NOTE: This port was done using an earlier version of the AIX
compiler.  It probably imposed more limitations than would be required with
the current compiler.  This version of the port produces an excessively large